--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Правильные шахматы</title>
     <link rel="stylesheet" href="./pages/index.css">
+    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
 </head>
 
 <body>
-
+<div class="page">
 <header class="header">
         <div class="header__column">
             <img class="header__logo" src="images/logo.svg" alt="Пешка">
@@ -27,7 +28,7 @@
         <div class="correct-chess__content">
             <div class="correct-chess__club">Клуб</div>
                 <h1 class="correct-chess__title">Правильные шахматы</h1>
-                <p class="correct-chess__text">Приходите к нам, играть в шахматы! Сразитесь классическом поединке, блиц состязании и бою с гройсмейстером. </p>
+                <p class="correct-chess__text">Приходите к нам, играть в шахматы! Сразитесь в классическом поединке, блиц состязании и бою с гройсмейстером. </p>
                 <img class="correct-chess__image" src="images/blue%20table.png" alt="Голубая шахматная доска">
         </div>
     </section>
@@ -36,30 +37,33 @@
         <div class="team__content">
             <h2 class="team__title">Наша команда</h2>
             <p class="team__text">Лучшие шахматисты и шахматистки любители России, гройсмейстеры, с ними играть — одно удовольствие!</p>
-            <div class="team__container">
-                <div class="team__item">
+            <div class="team__scroll-wrapper">
+            <ul class="team__container">
+                <li class="team__item">
                     <img class="team__item-image" src="images/Andi.png" alt="Фото Андрей шахматист">
                     <p class="team__item-name">Андрей</p>
                     <p class="team__item-info">Шахматист, писатель.</p>
-                </div>
-                <div class="team__item">
+                </li>
+                <li class="team__item">
                     <img class="team__item-image" src="images/Hik.png" alt="Фото Никита шахматист">
                     <p class="team__item-name">Никита</p>
                     <p class="team__item-info">Шахматист, кулинар.</p>
-                </div>
-                <div class="team__item">
+                </li>
+                <li class="team__item">
                     <img class="team__item-image" src="images/Aleks.png" alt="Фото Алексей шахматист">
                     <p class="team__item-name">Алексей</p>
                     <p class="team__item-info">Шахматист, геймер.</p>
-                </div>
+                </li>
+            </ul>
+                <div class="swiper-pagination"></div>
             </div>
         </div>
     </section>
     <section class="contact">
         <div class="contact__content">
             <div class="contact__info">
-                <h2 class="contact__title">Хочешь в комаду?</h2>
-                <p class="contact__text">Свяжись с нами и мы обсудим все детали присоеденения к команде.</p>
+                <h2 class="contact__title">Хочешь в команду?</h2>
+                <p class="contact__text">Свяжись с нами и мы обсудим все детали присоединения к команде.</p>
             </div>
         </div>
     </section>
@@ -67,14 +71,20 @@
         <div class="battles__content">
             <h2 class="battles__title">Сражения</h2>
             <p class="battles__text">Сражайтесь в парах и приятно проводите время. Если хотите прокачать свои навыки — сыграйте с нашими шахматистами.</p>
-            <div class="battles__game">
-                <img class="battles__image" src="images/play.png"alt="Партия в шахматы">
+            <div class="battles__scroll-wrapper">
+            <ul class="battles__game">
+                <li class="battles__game-item">
+                <img class="battles__image" src="images/play.png" alt="Партия в шахматы">
+                </li>
+                <li class="battles__game-item">
                 <img class="battles__image" src="images/time.png" alt="Шахматная партия">
+                </li>
+                <li class="battles__game-item">
                 <img class="battles__image" src="images/time%20play.png" alt="Время пошло шахматной партии">
-            </div>
-            <div class="battles__main">
-                <img class="battles__main-illustration" src="images/green%20table.png" alt="Зеленая шахматная доска">
-            </div>
+                </li>
+            </ul>
+        </div>
+            <img class="battles__main-illustration" src="images/green%20table.png" alt="Зеленая шахматная доска">
         </div>
     </section>
 </main>
@@ -85,11 +95,28 @@
                 <p class="footer__text">Зарегистрироваться</p>
             </button>
             <p class="footer__chess-info">Шахматный клуб в Москве.</p>
-            <p class="footer__copycenter">© Chees Club.</p>
+            <p class="footer__copycentre">© Chess Club.</p>
         </div>
 </footer>
+</div>
+<div class="popup">
+    <div class="popup__container">
+        <img class="popup__logo" src="images/logo.svg" alt="Пешка">
+        <div class="popup__form">
+            <h2 class="popup__title">Регистрация</h2>
+            <form name="form-info">
+                <fieldset class="popup__item-container">
+                    <input class="popup__item" type="text" name="name" id="name" placeholder="Имя" required>
+                    <input class="popup__item" type="email" name="email" id="email" placeholder="Email" required>
+                </fieldset>
+                <button class="popup__submit" type="submit">Зарегистрироваться</button>
+            </form>
+        </div>
+    </div>
+</div>
 
 <script src="scripts/index.js"></script>
+<script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
 
 </body>
 
