--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Правильные шахматы</title>
     <link rel="stylesheet" href="./pages/index.css">
-    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
+
 </head>
 
 <body>
@@ -106,18 +106,15 @@
             <h2 class="popup__title">Регистрация</h2>
             <form name="form-info">
                 <fieldset class="popup__item-container">
-                    <input class="popup__item" type="text" name="name" id="name" placeholder="Имя" required>
-                    <input class="popup__item" type="email" name="email" id="email" placeholder="Email" required>
+                    <input class="popup__item" type="text" name="name" id="name" placeholder="Имя" required="required" minlength="2" maxlength="40">
+                    <input class="popup__item" type="email" name="email" id="email" placeholder="Email" required="required" minlength="2" maxlength="200">
                 </fieldset>
-                <button class="popup__submit" type="submit">Зарегистрироваться</button>
+                <button class="popup__submit" type="submit" id="add-card-submit">Зарегистрироваться</button>
             </form>
         </div>
     </div>
 </div>
 
 <script src="scripts/index.js"></script>
-<script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
-
 </body>
-
 </html>
