add mixsins, constants

--- a/index.html
+++ b/index.html
@@ -55,7 +55,6 @@
                     <p class="team__item-info">Шахматист, геймер.</p>
                 </li>
             </ul>
-                <div class="swiper-pagination"></div>
             </div>
         </div>
     </section>
@@ -106,8 +105,8 @@
             <h2 class="popup__title">Регистрация</h2>
             <form name="form-info">
                 <fieldset class="popup__item-container">
-                    <input class="popup__item" type="text" name="name" id="name" placeholder="Имя" required="required" minlength="2" maxlength="40">
-                    <input class="popup__item" type="email" name="email" id="email" placeholder="Email" required="required" minlength="2" maxlength="200">
+                    <input class="popup__item" type="text" name="name" id="name" placeholder="Имя" required>
+                    <input class="popup__item" type="email" name="email" id="email" placeholder="Email" required>
                 </fieldset>
                 <button class="popup__submit" type="submit" id="add-card-submit">Зарегистрироваться</button>
             </form>
